fixing spot demo css alignment

--- a/src/pages/spot/index.css
+++ b/src/pages/spot/index.css
@@ -1,18 +1,17 @@
-/* body {
-  background-color: rgb(50, 50, 50);
-} */
-
-/* div {
-  width: 100%;
-} */
-
 #canvas-div {
+  position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
-canvas {
+#loading-message {
+  z-index: 4;
+}
+
+.demo-canvas {
   position: absolute;
+  top: 0;
   /* border: solid 1px; */
 }
 
